AddUrlTestCorrect fix